[package]
name = "nbio"
version = "0.1.0"
authors = ["Alex Zatelepin <mvzp10@gmail.com>"]
edition = "2018"

[dependencies]
httparse = "1.3"
chrono = "0.4.7"
mio = "0.6"
slab = "0.4"
crossbeam = "0.7"
tokio01 = { package="tokio", version="0.1" }
tokio02 = { package="tokio", version="=0.2.0-alpha.4" }
